--- a/Organizate/app/build.gradle
+++ b/Organizate/app/build.gradle
@@ -26,4 +26,9 @@ dependencies {
     compile 'com.android.support:support-v4:23.2.1'
     compile 'com.android.support:design:23.2.1'
     compile 'org.adw.library:discrete-seekbar:1.0.1'
+    compile 'com.google.firebase:firebase-core:9.0.1'
+    compile 'com.google.firebase:firebase-database:9.0.1'
+    compile 'com.google.firebase:firebase-auth:9.0.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
